<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dialog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextDialog1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextDialog2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dialog1" />

    <Button
        android:id="@+id/btn_dialog3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextDialog3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dialog2" />

    <Spinner
        android:id="@+id/sp_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/months"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dialog3" />

    <Button
        android:id="@+id/btn_addOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_months" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_reply"
        app:layout_constraintTop_toBottomOf="@+id/btn_addOne" />

</androidx.constraintlayout.widget.ConstraintLayout>